--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <head>
         <title>WebSocket demo</title>
         <style type="text/css">
             body {
-                font-family: "Courier New", sans-serif;
+
                 text-align: center;
             }
             .buttons {
@@ -39,32 +41,34 @@
         </style>
     </head>
     <body>
-        <div class="buttons">
-            <div class="minus button">-</div>
-            <div class="value">?</div>
-            <div class="plus button">+</div>
-        </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">WCScanner</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="core/home.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="core/project.html">Project</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         <div class="state">
             <span class="users">?</span> online
         </div>
         <script>
-            var minus = document.querySelector('.minus'),
-                plus = document.querySelector('.plus'),
-                value = document.querySelector('.value'),
-                users = document.querySelector('.users'),
+            var users = document.querySelector('.users'),
                 websocket = new WebSocket("ws://192.168.43.97:6789/");
-            minus.onclick = function (event) {
-                websocket.send(JSON.stringify({action: 'minus'}));
-            }
-            plus.onclick = function (event) {
-                websocket.send(JSON.stringify({action: 'plus'}));
-            }
             websocket.onmessage = function (event) {
                 data = JSON.parse(event.data);
                 switch (data.type) {
-                    case 'state':
-                        value.textContent = data.value;
-                        break;
                     case 'users':
                         users.textContent = (
                             data.count.toString() + " user" +
