--- a/client/index.html
+++ b/client/index.html
@@ -9,32 +9,6 @@
 
                 text-align: center;
             }
-            .buttons {
-                font-size: 4em;
-                display: flex;
-                justify-content: center;
-            }
-            .button, .value {
-                line-height: 1;
-                padding: 2rem;
-                margin: 2rem;
-                border: medium solid;
-                min-height: 1em;
-                min-width: 1em;
-            }
-            .button {
-                cursor: pointer;
-                user-select: none;
-            }
-            .minus {
-                color: red;
-            }
-            .plus {
-                color: green;
-            }
-            .value {
-                min-width: 2em;
-            }
             .state {
                 font-size: 2em;
             }
@@ -56,6 +30,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="core/project.html">Project</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="core/control.html">Control</a>
                         </li>
                     </ul>
                 </div>
