--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
         </div>
         <script>
             var users = document.querySelector('.users'),
-                websocket = new WebSocket("ws://192.168.43.97:6789/");
+                websocket = new WebSocket("ws://localhost:6789/");
             websocket.onmessage = function (event) {
                 data = JSON.parse(event.data);
                 switch (data.type) {
