--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" rel="stylesheet">
     <head>
         <title>WebSocket demo</title>
-        <style type="text/css">
-            body {
-
-                text-align: center;
-            }
-            .state {
-                font-size: 2em;
-            }
-        </style>
     </head>
     <body>
 
@@ -21,7 +15,14 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.js"></script>
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/js/mdb.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         var content_div = document.getElementById("content");
@@ -41,8 +42,16 @@
             }
         };
 
+        $(document).ready(function(){
+            $('#content').load("./core/home.html");
+        });
+
         function drawHomeContent() {
             $('#content').load("./core/home.html");
+        }
+
+        function drawControlContent() {
+            $('#content').load("./core/control.html");
         }
 
     </script>
@@ -62,14 +71,13 @@
                             <a class="nav-link" href="core/project.html">Project</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="core/control.html">Control</a>
+                            <a class="nav-link" onclick="drawControlContent()" href="#">Control</a>
                         </li>
                     </ul>
                 </div>
             </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div id="content">
-            HELLO test
         </div>
     </div>
 
