client/server comm stable

--- a/client/core/home.html
+++ b/client/core/home.html
@@ -1,4 +1,4 @@
 <p>Bonjour, vous êtes dans l'home</p>
 <div class="state">
-    <span class="users">?</span> online
+    <span class="users" id="users">?</span> online
 </div>
