--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
             </nav>
         <div class="state">
             <span class="users">?</span> online
+			<img src= "http://localhost:8081/?action=stream" width="640" height="480" title="PI Cam"/>
         </div>
         <script>
             var users = document.querySelector('.users'),
