On tente un site beau

--- a/client/core/control.html
+++ b/client/core/control.html
@@ -1,3 +1,5 @@
+<p>Bonjour, vous êtes dans l'interface de control</p>
+
 <div class="row">
     <div class="col-md-8">
         <div class="form-group">
