--- a/client/core/home.html
+++ b/client/core/home.html
@@ -1,4 +1,17 @@
-<p>Bonjour, vous êtes dans l'home</p>
-<div class="state">
-    <span class="users" id="users">?</span> online
+<style>
+    p[type=online] {
+        background-color: #00b310;
+        border: none;
+        border-radius: 12px;
+        color: white;
+        padding: 16px 16px;
+        text-decoration: none;
+        margin: 4px 10px;
+        text-align: center;
+        font-size: 250%;
+        font-family: "Arial Black";
+    }
+</style>
+<div class="state" id="on">
+    <p type="online">ONLINE</p>
 </div>
