adding npm dependencies (bootstrap, jquery etc...)

--- a/client/core/control.html
+++ b/client/core/control.html
@@ -7,7 +7,7 @@
 
             <div class="row">
                 <div class="col-md-3">
-                    <button class="btn blue-gradient" onclick="turn_bed_CW_trigger()"><i class="fas fa-redo mr-1 fa-flip-horizontal"></i> Left</button>
+                    <button class="btn btn-outline-primary" onclick="turn_bed_CW_trigger()"><i class="fas fa-redo mr-1 fa-flip-horizontal"></i> Left</button>
                 </div>
                 <div class="col-md-6">
                     <div class="md-form input-group mb-4">
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn blue-gradient" onclick="turn_bed_CCW_trigger()">Right <i class="fas fa-redo mr-1"></i></button>
+                    <button class="btn btn-outline-primary" onclick="turn_bed_CCW_trigger()">Right <i class="fas fa-redo mr-1"></i></button>
                 </div>
             </div>
         </div>
